# gVent

./: .gitignore  CMakeLists.txt  CONTRIBUTOR.md  DISCLAIMER.md  Makefile  README.md  platformio.ini  ventilation_test
.github/workflows/: main.yml
Assembly/: How to maintain & clean the device.docx
CAD Drawings/GA/: 2051K124_CHEMICAL-RESISTANT PVC DUCT - 10inch.SLDPRT  4596K121_THICK-WALL DARK GRAY PVC PIPE FITTING.SLDPRT
CAD Drawings/STL Files/: GA - Bottom assembly-1 4882K110_THICK-WALL DARK GRAY PVC THREADED PIPE NIPPLE-1.STL  GA - Bottom assembly-1 5779K638_PUSH-TO-CONNECT TUBE FITTING FOR AIR-1.STL  GA - Top Assembly-1 PI-002-1.STL  (+9 more)
Requirements/: HRS.md  SLS.md  SRS.md
Testing/: gVent Testing Results.xlsx  test_rolling_average.cpp
TestingDocumentation/: How to run a validation test and how often.docx  Test Methods _ Test Results.docx
VentilatorControl/: VentilatorControl.ino  fs6122.cpp  fs6122.h  gVent HAZOP.xlsx  sensors.ino
dashboard/: .gitignore  app.py  dashboard_app.py  sens_sim.py
include/: main.h  stm32f4xx_hal_conf.h
src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
test/: CMakeLists.txt  myFirstTest-test.cpp  testRunner.c  testUtil.c  testUtil.h  test_runner.c  test_util.h  ventilation-test.c  ventilation-test.h  ventilation_test.c  ventilation_test.h
test/action-test/: Dockerfile  entrypoint.sh
test/stubs/: clinician_input_stub.c  clinician_input_stub.h  dss_stub.c  pressure_sensor_stub.c  pressure_sensor_stub.h  sensor_stub.c  sensor_stub.h  systemInfo_stub.c  systemInfo_stub.h  system_info_stub.c  system_info_stub.h  valve_stub.h
(+148 files in other folders)
